<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/mini_padding">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemName"
                style="@style/ItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/item_name" />

        </LinearLayout>

        <!-- Horizontal row for Qty and Price -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_hand_title" />

            <TextView
                android:id="@+id/itemOnHand"
                style="@style/ItemDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/mini_padding"
                android:paddingRight="@dimen/mini_padding"
                tools:ignore="RtlSymmetry"
                tools:text="@string/onHand_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/mini_padding"
                android:paddingStart="@dimen/mini_padding"
                android:text="@string/itemPrice_title"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/itemPrice"
                style="@style/ItemDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/price_example" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/sell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:focusable="false"
        android:text="@string/sell_1" />

    <TextView
        android:id="@+id/out_of_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:text="@string/out_of_stock"
        android:visibility="gone" />
</LinearLayout>