<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_call_to_reorder_item"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/call_reorder_item"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_save_update_item"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/delete_all_inventory"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_delete_item"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_item"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>